tests/core/snapshots/graphql-datasource-with-args.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "post": {
        "id": 1,
        "user": {
          "name": "Leanne Graham"
        }
      }
    }
  }
}
