tests/core/snapshots/graphql-datasource-with-args.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

type Post {
  id: Int
  user: User
}

type Query {
  post(id: Int): Post @graphQL(args: [{key: "id", value: "{{.args.id}}"}], url: "http://upstream/graphql", name: "post")
  user(id: Int): User @graphQL(args: [{key: "id", value: "{{.args.id}}"}], url: "http://upstream/graphql", name: "user")
}

type User {
  id: Int
  name: String
}
