tests/core/snapshots/graphql-datasource-with-empty-enum.md_0.snap
---
source: tests/core/spec.rs
assertion_line: 200
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "post": {
        "severity": {
          "type": null
        }
      }
    }
  }
}
