tests/core/snapshots/graphql-datasource-with-empty-enum.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

enum EnumType {
  INFORMATION
  WARNING
}

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

scalar PhoneNumber

type Post {
  severity: WithOptEnum!
}

type Query {
  post: Post
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

type WithOptEnum {
  type: EnumType
}

schema {
  query: Query
}
