tests/core/snapshots/graphql-datasource-with-empty-enum.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server @upstream {
  query: Query
}

enum EnumType {
  INFORMATION
  WARNING
}

type Post {
  severity: WithOptEnum!
}

type Query {
  post: Post @expr(body: {severity: {type: null}})
}

type WithOptEnum {
  type: EnumType
}
