tests/core/snapshots/graphql-datasource-with-mandatory-enum.md_0.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "internal: non-null types require a return value",
        "locations": [
          {
            "line": 1,
            "column": 27
          }
        ],
        "path": [
          "post",
          "severity",
          "type"
        ]
      }
    ]
  }
}
