tests/core/snapshots/graphql-nested-datasource.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type A {
  b: B
  bid: Int!
  c: C
  cid: Int!
  id: Int!
}

type B {
  id: Int!
  y: String!
}

scalar Bytes

type C {
  id: Int!
  x: String!
}

scalar Date

scalar DateTime

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

scalar PhoneNumber

type Query {
  a: [A]
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
}
