tests/core/snapshots/graphql-nested-datasource.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

type A {
  b: B @graphQL(args: [{key: "id", value: "{{.value.bid}}"}], url: "http://upstream/graphql", name: "b")
  bid: Int!
  c: C @graphQL(args: [{key: "id", value: "{{.value.cid}}"}], url: "http://upstream/graphql", name: "c")
  cid: Int!
  id: Int!
}

type B {
  id: Int!
  y: String!
}

type C {
  id: Int!
  x: String!
}

type Query {
  a: [A] @graphQL(url: "http://upstream/graphql", name: "a")
}
